# GAME-FRAMEWORK

./: Cargo.toml  README.md  imgui.ini
examples/: blank_testing.rs  rotation.rs  starting_point3d.rs  test_scene.rs  verlet2.rs  verlet_physics.rs
examples/assets/models/: suzanne.mtl
src/: lib.rs  main.rs
src/events/: event_handler.rs  main_loop.rs  mod.rs
src/graphics/: SHADERS.rs  camera.rs  font.rs  instance_mesh.rs  light.rs  macro.rs  mesh.rs  mod.rs  model.rs  particle.rs  renderer.rs  shader.rs  shader_types.rs  test_scene.rs  texture.rs
src/gui/: inspector.rs  mod.rs  ui.rs
src/utils/: geometry.rs  math.rs  matrix.rs  mesh_geometry.rs  mod.rs  vector.rs
