[package]
name = "tiny-game-framework"
version = "0.0.134"
authors = ["Felipe <felipeguimaraesteodoro@gmail.com>", "Caio <ferrandis.ca@gmail.com>", "Bob <bob@example.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "graphics", "glfw", "opengl"]
description = "Tiny game framework for creating games!"
repository = "https://github.com/Felipe-Guimaraes-Teodoro/GAME-FRAMEWORK"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freetype-rs = "0.36.0"
gl = "0.14.0"
glam = "0.27.0"
glfw = "0.55.0"
image = "0.25.1"
imgui = "0.12.0"
once_cell = "1.19.0"
rand = "0.8.5"
